# sentiric-dialog-service

./: .context.md  Cargo.toml  Dockerfile  LOGIC.md  Makefile  README.md  TASKS.md  TEST.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: docker-publish.yml  release.yml
cmd/dialog-service/: main.go
internal/clients/llm/: client.go
internal/config/: config.go
internal/database/: database.go  redis.go
internal/logger/: logger.go
internal/retry/: retry.go
internal/server/: grpc.go
internal/service/: dialog.go  processor.go
internal/state/: manager.go
src/: app.rs  config.rs  logger.rs  main.rs
src/clients/: knowledge_client.rs  llm_client.rs  mod.rs
src/server/: grpc.rs  http.rs
src/state/: manager.rs  mod.rs  mq.rs  publisher.rs
