[package]
name = "sentiric-dialog-service"
version = "1.1.8"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
async-stream = "0.3"
futures = "0.3"
tonic = { version = "0.11", features = ["tls", "tls-roots", "gzip"] }
prost = "0.12"

# Configuration & Environment
config = "0.14"
dotenvy = "0.15"

# HTTP & Metrics
axum = "0.7"
hyper = { version = "0.14", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability (SUTS v4.0)
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry", "json"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3" # SUTS v4.0 host name çözümü için

# State Management & Messaging (Nano-Edge Hybrid L1/L2)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"
lapin = "2.3" # [CRITICAL FIX]: RabbitMQ Ghost Publisher için eklendi

# Utils
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
anyhow = "1.0"
thiserror = "1.0"

# Contracts
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.20.8" }

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true